--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
-body, #root, #appContainer {
-  /* position: absolute;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  display: block;
-  top: 0; */
+html, body, #root, #appContainer {
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+}
+
+#appContainer {
+  background-color: darkgrey;
 }
 
 .navbar {
