Styled delete buttons and made text unselectable

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,28 @@ html, body, #root, #appContainer {
   height: 100%;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+h1, h2, h3, p {
+  cursor: default;
+}
+
 #appContainer {
   background-color: darkgrey;
 }
