--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -31,4 +31,21 @@ h2, h3 {
 .add-list-container {
   display: flex;
   flex-direction: column;
+  background-color: lightgray;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+}
+
+.board-add-list-input {
+  font-size: 1rem;
+  padding: 0;
+  margin: 0.4rem 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.board-add-list-input:focus {
+  border: 0;
+  background-color: transparent;
+  outline: 0;
 }
