--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,9 +2,17 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  margin-bottom: 0.5rem;
+  border-style: solid;
+  border-width: 1px;
+  border-color: transparent;
+  border-radius: 5px;
+  background-color: whitesmoke;
+  padding: 0.5rem;
 }
 
 .card-content {
+  font-size: 1rem;
   margin: 0.4rem 0;
 }
 
