--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -43,7 +43,7 @@
   margin-top: 0.5rem;
 }
 
-.card-list > * {
+.list-add-card-item {
   margin-bottom: 0.5rem;
   border-style: solid;
   border-width: 1px;
@@ -51,4 +51,18 @@
   border-radius: 5px;
   background-color: whitesmoke;
   padding: 0.5rem;
+}
+
+.list-add-card-input {
+  font-size: 1rem;
+  padding: 0;
+  margin: 0.4rem 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.list-add-card-input:focus {
+  border: 0;
+  background-color: transparent;
+  outline: 0;
 }
