--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -7,7 +7,7 @@
   border-width: 1px;
   border-color: transparent;
   border-radius: 5px;
-  background-color: whitesmoke;
+  background-color: blanchedalmond;
   padding: 0.5rem;
 }
 
