--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   margin-bottom: 0.5rem;
   margin-right: 0.5rem;
-  background-color: lightgray;
+  background-color: gold;
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: auto;
@@ -49,7 +49,7 @@
   border-width: 1px;
   border-color: transparent;
   border-radius: 5px;
-  background-color: whitesmoke;
+  background-color: blanchedalmond;
   padding: 0.5rem;
 }
 
