--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -10,8 +10,9 @@
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .list-header {
@@ -43,10 +44,10 @@
   list-style: none;
   padding-left: 0;
   margin-top: 0.5rem;
+  margin-bottom: 0;
 }
 
 .list-add-card-item {
-  margin-bottom: 0.5rem;
   border-style: solid;
   border-width: 1px;
   border-color: transparent;
