--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -8,12 +8,13 @@
   border-color: transparent;
   border-radius: 5px;
   background-color: hsla(0,0%,100%,.9);
-  padding: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .card-content {
   font-size: 1rem;
-  margin: 0.4rem 0;
+  margin: 0.25rem 0.25rem 0.25rem 0;
   color: #333;
 }
 
